name:                game-pal
version:             0.1.0.0
synopsis:            Utilities for unifying gl-pal, oculus-mini, hydra-hs, glfw-pal
description:         Please see README.md
homepage:            http://github.com/lukexi/game-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Game.Pal
    Game.Pal.Types
    Game.Pal.View
    Game.Pal.Movement
    Game.Pal.Window
  build-depends:       
    base,
    binary,
    mtl,
    lens,
    linear,
    gl,
    glfw-pal,
    gl-pal,
    hydra-hs,
    oculus-mini
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -Wall -O2 -fprof-auto

executable game-pal
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-pal
                     , glfw-pal
                     , gl-pal
                     , gl
                     , linear
                     , mtl
                     , lens
                     , oculus-mini
                     -- , halive
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/lukexi/game-pal
