name:                vr-pal
version:             0.1.0.0
synopsis:            Utilities for unifying gl-pal, oculus-mini, hydra-hs, glfw-pal, openvr-hs
description:         Please see README.md
homepage:            http://github.com/lukexi/vr-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Graphics.VR.Pal
    Graphics.VR.Pal.Hands
    Graphics.VR.Pal.Emulation
    Graphics.VR.Pal.Movement
    Graphics.VR.Pal.Types
    Graphics.VR.Pal.Window
  build-depends:
    base,
    binary,
    mtl,
    hashable,
    lens-extra,
    linear-extra,
    gl,
    glfw-pal,
    gl-pal,
    -- halive,
    random,
    containers,
    MonadRandom,
    openvr-hs,
    time
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -Wall -O2 -fprof-auto

test-suite minimal
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Minimal.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vr-pal
                     , glfw-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     -- , halive
                     , time

test-suite cubefield
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Cubes.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vr-pal
                     , glfw-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     , lens-extra
                     -- , halive
                     , random
                     , containers
                     , MonadRandom
                     , time

source-repository head
  type:     git
  location: https://github.com/lukexi/vr-pal
