name:                vr-pal
version:             0.1.0.0
synopsis:            Simple interface to openvr-hs with SDL2
description:         Please see README.md
homepage:            http://github.com/lukexi/vr-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Graphics.VR.Pal
    Graphics.VR.Pal.Hands
    Graphics.VR.Pal.Emulation
    Graphics.VR.Pal.Movement
    Graphics.VR.Pal.Types
    Graphics.VR.Pal.Window
    Graphics.VR.Pal.SDLUtils
  build-depends:
    base,
    binary,
    mtl,
    hashable,
    lens-extra,
    linear-extra,
    linear,
    gl,
    sdl2,
    text,
    gl-pal,
    -- halive,
    random,
    containers,
    MonadRandom,
    openvr-hs,
    time
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -Wall -O2 -fprof-auto
  if os(windows)
    build-depends: Win32
    c-sources: cbits/win32_SetProcessDpiAware.c
    includes: win32_SetProcessDpiAware.h
    include-dirs: cbits

test-suite minimal
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Minimal.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vr-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     -- , halive
                     , time
                     , sdl2
                     , text

test-suite cubefield
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Cubes.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vr-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     , lens-extra
                     -- , halive
                     , random
                     , containers
                     , MonadRandom
                     , time
                     , sdl2
                     , text
  if os(windows)
    extra-libraries: user32


source-repository head
  type:     git
  location: https://github.com/lukexi/vr-pal
